--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.1",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/stack": "^6.3.5",
     "react": "18.1.0",
+    "react-devtools": "^4.26.1",
     "react-native": "0.70.6",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
