--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.5",
     "react": "18.1.0",
     "react-devtools": "^4.26.1",
+    "react-hook-form": "^7.39.5",
     "react-native": "0.70.6",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.5",
