--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.39.5",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "^4.4.1",
