--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.5",
+    "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0",
