--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-segmented-control/segmented-control": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
@@ -22,6 +23,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.5",
+    "react-native-reanimated": "^2.13.0",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
