--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
+    "@redux-devtools/core": "^3.13.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "deprecated-react-native-prop-types": "^2.2.0",
     "react": "18.1.0",
     "react-devtools": "^4.26.1",
@@ -30,7 +32,10 @@
     "react-native-screens": "^3.18.2",
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "^13.6.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
