--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -218,11 +218,11 @@ android {
             keyPassword 'android'
         }
         release {
-            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
-                storeFile file(MYAPP_UPLOAD_STORE_FILE)
-                storePassword MYAPP_UPLOAD_STORE_PASSWORD
-                keyAlias MYAPP_UPLOAD_KEY_ALIAS
-                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            if (project.hasProperty('EMISTIRI_UPLOAD_STORE_FILE')) {
+                storeFile file(EMISTIRI_UPLOAD_STORE_FILE)
+                storePassword EMISTIRI_UPLOAD_STORE_PASSWORD
+                keyAlias EMISTIRI_UPLOAD_KEY_ALIAS
+                keyPassword EMISTIRI_UPLOAD_KEY_PASSWORD
             }
         }
     }
