--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.2",
     "@redux-devtools/core": "^3.13.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.3",
     "deprecated-react-native-prop-types": "^2.2.0",
     "react": "18.1.0",
     "react-devtools": "^4.26.1",
