--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.13.0",
