--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "deprecated-react-native-prop-types": "^2.2.0",
+    "lodash.camelcase": "^4.3.0",
     "lodash.mapkeys": "^4.6.0",
     "react": "18.1.0",
     "react-devtools": "^4.26.1",
